chore(package.json) react.parts listing keyword

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/timer-mixin.js",
   "keywords": [
     "react",
+    "react-component",
     "mixin"
   ],
   "author": "Adam Ellsworth",
